--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ pom.xml.asc
 .lein-failures
 .nrepl-port
 .cpcache/
+datomic-console/.credentials
+datomic-pro-starter/.credentials
+datomic-pro-starter/config/dev-transactor.properties
