--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,28 @@
-datomicdb:
-    build: datomic-pro-starter
-    ports:
-        - "4336:4336"
-        - "4335:4335"
-        - "4334:4334"
-    volumes:
-        - "/data"
-waiter:
-    image: aanand/wait
-    links:
-        - datomicdb
-console:
-    build: datomic-console
-    ports:
-        - "9000:9000"
-    links:
-        - waiter
-        - datomicdb
+services:
+    node:
+        container_name: node
+        image: "node:12"
+        build: ./
+        command: npm run start_watch_inspect
+        ports:
+            - "3000:3000"
+
+    datomicdb:
+        build: datomic-pro-starter
+        ports:
+            - "4336:4336"
+            - "4335:4335"
+            - "4334:4334"
+        volumes:
+            - "/data"
+    waiter:
+        image: aanand/wait
+        links:
+            - datomicdb
+    console:
+        build: datomic-console
+        ports:
+            - "9000:9000"
+        links:
+            - waiter
+            - datomicdb
